welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: value update is not a member of java.awt.Color
    		if (getCouleurSol()=Color.green) return true
                    ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
    		if (getCouleurSol()=Color.green) return true
                ^